# 6-DOF-Robot

./: README.md
robot1_ws/devel/: .catkin  .rosinstall  local_setup.sh
robot1_ws/devel/include/robot1_chat/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h
robot1_ws/devel/include/robot1_controller/: AnglesConverter.h  AnglesConverterRequest.h  AnglesConverterResponse.h
robot1_ws/devel/include/robot1_remote/: Robot1TaskAction.h  Robot1TaskActionFeedback.h  Robot1TaskActionGoal.h  Robot1TaskActionResult.h  Robot1TaskFeedback.h  Robot1TaskGoal.h  Robot1TaskResult.h
robot1_ws/devel/lib/pkgconfig/: robot1_bringup.pc  robot1_chat.pc  robot1_controller.pc  robot1_description.pc  robot1_moveit.pc  (+1 more)
robot1_ws/src/robot1_bringup/: CMakeLists.txt  package.xml
robot1_ws/src/robot1_chat/: CMakeLists.txt  package.xml
robot1_ws/src/robot1_controller/: CMakeLists.txt
robot1_ws/src/robot1_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
robot1_ws/src/robot1_controller/include/robot1_controller/: robot1_interface.hpp
robot1_ws/src/robot1_controller/launch/: controller.launch
robot1_ws/src/robot1_controller/src/: angles_converter.cpp  robot1_interface.cpp
robot1_ws/src/robot1_controller/srv/: AnglesConverter.srv
robot1_ws/src/robot1_description/: CMakeLists.txt
robot1_ws/src/robot1_moveit/: .setup_assistant  CMakeLists.txt
robot1_ws/src/robot1_remote/: CMakeLists.txt
(+163 files in other folders)
